optimized code and added readme file